@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-562: Implement getConf/setConf in AbstractHive classes (majakabiljo)
+
   GIRAPH-561: Only print vertex/edge input classes if not null (aching)
 
   GIRAPH-554: Set PartitionContext in InternalVertexRunner (majakabiljo)
